[release] 1.1.0
- Micronaut Adapter (not GralVM optimized)
- Validator options thru pom.xml